cabal-version: 3.0
name: banana-split
version: 0.1.0.0
license: BSD-3-Clause
build-type: Simple

common base-settings
  default-language: GHC2021
  default-extensions:
    DuplicateRecordFields
    LambdaCase
    LexicalNegation
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints

  build-depends:
    Decimal,
    aeson,
    base,
    beam-core,
    beam-postgres,
    bytestring,
    conferer,
    containers,
    directory,
    elm-bridge,
    file-embed,
    filepath,
    glpk-hs,
    hmatrix,
    hmatrix-glpk,
    http-api-data,
    http-media,
    http-types,
    mtl,
    postgresql-simple,
    pretty-simple,
    process,
    protolude,
    random,
    resource-pool,
    safe-money,
    safe-money-aeson,
    servant,
    servant-elm,
    servant-server,
    string-conversions,
    string-interpolate,
    text,
    time,
    ulid,
    unix,
    unordered-containers,
    wai,
    wai-app-static,
    wai-extra,
    warp,

common threaded-rts
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import: base-settings
  hs-source-dirs: src/core/
  exposed-modules:
    BananaSplit
    BananaSplit.Core
    BananaSplit.Deudas
    BananaSplit.Monto
    BananaSplit.Participante
    BananaSplit.Repartija
    BananaSplit.TestUtils
    BananaSplit.ULID

library database
  import: base-settings
  hs-source-dirs: src/database/
  exposed-modules:
    BananaSplit.Persistence
    BananaSplit.PgRoll

  build-depends:
    banana-split

library elm
  import: base-settings
  hs-source-dirs: src/elm/
  exposed-modules:
    BananaSplit.Elm

  build-depends:
    banana-split,
    banana-split:http,

library http
  import: base-settings
  hs-source-dirs: src/http/
  exposed-modules:
    RunServer
    Site.Api
    Site.Config
    Site.Handler.Grupos
    Site.Handler.Pagos
    Site.Handler.Repartijas
    Site.Handler.Utils
    Site.Server
    Site.Types

  build-depends:
    banana-split,
    banana-split:database,

executable banana-split
  import: base-settings, threaded-rts
  hs-source-dirs: src/executable/
  main-is: Main.hs
  build-depends:
    banana-split:database,
    banana-split:elm,
    banana-split:http,

test-suite spec
  import: base-settings, threaded-rts
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    BananaSplit.DeudasSpec
    BananaSplit.Persistence.GrupoSpec
    BananaSplit.Persistence.SpecHook
    BananaSplit.RepartijaSpec
    BananaSplitSpec
    Site.Handler.GruposSpec

  build-depends:
    QuickCheck,
    banana-split,
    banana-split:database,
    banana-split:http,
    hspec,

  build-tool-depends: hspec-discover:hspec-discover
