cabal-version: 3.0
name: banana-split
version: 0.1.0.0
license: BSD-3-Clause
build-type: Simple

common base-settings
  default-language: GHC2021
  default-extensions:
    DuplicateRecordFields
    LambdaCase
    LexicalNegation
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints

  build-depends:
    Decimal,
    aeson,
    base,
    base64-bytestring,
    beam-core,
    beam-postgres,
    bytestring,
    conferer,
    conferer-warp,
    containers,
    directory,
    elm-bridge,
    file-embed,
    filepath,
    http-api-data,
    http-client,
    http-client-tls,
    http-media,
    http-types,
    mtl,
    postgresql-simple,
    pretty-simple,
    process,
    protolude,
    random,
    req,
    resource-pool,
    safe-money,
    safe-money-aeson,
    scientific,
    servant,
    servant-elm,
    servant-server,
    string-conversions,
    string-interpolate,
    temporary,
    text,
    time,
    ulid,
    unix,
    unordered-containers,
    wai,
    wai-app-static,
    wai-extra,
    warp,

common threaded-rts
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import: base-settings
  hs-source-dirs: src/core/
  exposed-modules:
    BananaSplit
    BananaSplit.Core
    BananaSplit.Deudas
    BananaSplit.Monto
    BananaSplit.Participante
    BananaSplit.Repartija
    BananaSplit.TestUtils
    BananaSplit.ULID
    Preludat

library database
  import: base-settings
  hs-source-dirs: src/database/
  exposed-modules:
    BananaSplit.Persistence
    BananaSplit.PgRoll

  build-depends:
    banana-split

library receipts
  import: base-settings
  hs-source-dirs: src/receipts/
  other-modules:
    BananaSplit.Receipts.OpenRouter
    BananaSplit.Receipts.Tesseract
    BananaSplit.Receipts.Types

  exposed-modules:
    BananaSplit.Receipts

  build-depends:
    banana-split

library elm
  import: base-settings
  hs-source-dirs: src/elm/
  exposed-modules:
    BananaSplit.Elm

  build-depends:
    banana-split,
    banana-split:http,

library http
  import: base-settings
  hs-source-dirs: src/http/
  exposed-modules:
    RunServer
    Site.Api
    Site.Config
    Site.Handler.Grupos
    Site.Handler.Pagos
    Site.Handler.Receipt
    Site.Handler.Repartijas
    Site.Handler.Utils
    Site.Server
    Site.Types

  build-depends:
    banana-split,
    banana-split:database,
    banana-split:receipts,

executable banana-split
  import: base-settings, threaded-rts
  hs-source-dirs: src/executable/
  main-is: Main.hs
  build-depends:
    banana-split:database,
    banana-split:elm,
    banana-split:http,

test-suite spec
  import: base-settings, threaded-rts
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    BananaSplit.DeudasSpec
    BananaSplit.Persistence.GrupoSpec
    BananaSplit.Persistence.PagosSpec
    BananaSplit.Persistence.SpecHook
    BananaSplit.RepartijaSpec
    BananaSplitSpec
    Site.Handler.GruposSpec

  build-depends:
    QuickCheck,
    banana-split,
    banana-split:database,
    banana-split:http,
    hspec,

  build-tool-depends: hspec-discover:hspec-discover
