cabal-version:       2.2

name:                rompepiernas
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/rompepiernas#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
common common-base
  build-depends:
    base >= 4.7 && < 5,
    bytestring,
    conferer,
    glpk-hs,
    hmatrix,
    hmatrix-glpk,
    lucid2-htmx,
    lucid2,
    http-media,
    unix,
    wai-extra,
    mtl,
    postgresql-simple,
    random,
    servant,
    servant-htmx,
    servant-server,
    string-interpolate,
    uuid,
    http-api-data,
    optics,
    containers,
    unordered-containers,
    pretty-simple,
    text,
    time,
    wai,
    warp,
    safe-money,
    ulid,
    selda,
    selda-postgresql,
    postgresql-migration,
    digestive-functors,
    aeson,
    string-conversions,
    servant-websockets,
  default-language: GHC2021
  default-extensions:
    OverloadedStrings
    LambdaCase
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints

library
  import: common-base
  hs-source-dirs: src
  exposed-modules:
    RompePiernas
    RompePiernas.Persistence

executable rompepiernas
  import: common-base
  hs-source-dirs: app
  main-is: Main.hs
  build-depends: rompepiernas
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

test-suite rompepiernas-test
  import: common-base
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
    base,
    rompepiernas,
    hspec,
    QuickCheck,
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/githubuser/rompepiernas
